syntax="proto3";

package storehouse_service;
option go_package="genproto/storehouse_service";

import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";

service ProductService {
    rpc CreateProduct(CreateProductRequest) returns (Product) {}
    rpc GetByIDProduct(ProductPrimaryKey) returns (Product) {}
    rpc GetListProduct(GetListProductRequest) returns (GetListProductResponse) {}
    rpc UpdateProduct(UpdateProductRequest) returns (Product) {}
    rpc UpdatePatchProduct(UpdatePatchProductRequest) returns (Product) {}
    rpc DeleteProduct(ProductPrimaryKey) returns (google.protobuf.Empty) {}
}

message ProductPrimaryKey {
    string id = 1;
}

message Product {
    string id = 1;
    string name = 2;
    int32 product_id = 3;
    int32 quantity = 4;
    string photo = 5;
    string description = 6;
    string size_type = 7;
    double size_value = 8;
    string weight_type = 9;
    double weight_value = 10;
    string branch_id = 11;
    string chapter_stock_id = 12;
    string created_at = 13;
    string updated_at = 14;
}

message CreateProductRequest {
    string name = 1;
    int32 product_id = 2;
    int32 quantity = 3;
    string photo = 4;
    string description = 5;
    string size_type = 6;
    double size_value = 7;
    string weight_type = 8;
    double weight_value = 9;
}

message UpdateProductRequest {
    string id = 1;
    string name = 2;
    int32 product_id = 3;
    int32 quantity = 4;
    string photo = 5;
    string description = 6;
    string size_type = 7;
    double size_value = 8;
    string weight_type = 9;
    double weight_value = 10;
    string branch_id = 11;
    string chapter_stock_id = 12;
}

message UpdatePatchProductRequest {
    string id = 1;
    google.protobuf.Struct fields = 2;
}

message GetListProductRequest {
    int32 limit = 1;
    int32 offset = 2;
    string search = 3;
}

message GetListProductResponse {
    int32 count = 1;
    repeated Product products = 2;
}
